--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/EmployeeManagement/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/EmployeeManagement/Index.cshtml
@@ -90,9 +90,13 @@
 							<button class="btn btn-warning" @@click="cancel()">取消</button>
 						</td>
 						<td>{{item.employeeId}}</td>
-						<td><input v-model="item.firstName" /></td>
-						<td><input v-model="item.lastName" /></td>
-						<td><input v-model="item.title" /></td>
+						<td><input v-model="item.Name" /></td>
+						<td><input v-model="item.Gender" /></td>
+						<td><input v-model="item.Birthday" /></td>
+						<td><input v-model="item.Phone" /></td>
+						<td><input v-model="item.Email" /></td>
+						<td><input v-model="詳細資料" /></td>
+						<td><input v-model="薪資" /></td>
 					</template>
 					<template v-else>
 						@*顯示範本*@
@@ -115,6 +119,35 @@
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.js"></script>
 	<script>
+		var vueApp = {
+			data() {
+				return {
+					EmployeeManagementViewModel: [],
+				};
+			},
+			mounted: function () {
+				let self = this;
+				self.EmployeeManagementViewModel();
+			},
+			methods: {
+
+				edit: function (employeeId) {
+					let self = this;
+					var EmployeeList = [];
+					for (var i = 0; i < self.EmployeeManagementViewModel.length; i++) {
+						var item = self.EmployeeManagementViewModel[i];
+						if (employeeId == item.employeeId) {
+							item.Edit = true;
+							self.
+										}
+					}
+				}
+
+			}
+
+		};
+
+
 
 	</script>
 	}
