--- a/EnjoyEat/EnjoyEat/wwwroot/css/MemberManagement.css
+++ b/EnjoyEat/EnjoyEat/wwwroot/css/MemberManagement.css
@@ -12,7 +12,12 @@
     margin-top: 20px;
 }
 
-/*修改資料區*/
+/*SweetAlert*/
+.swal2-container {
+    position: absolute;
+    height: 500px;
+    width: 500px;
+}
 /*圖片區*/
 .circle {
     border-radius: 50%; /* 設定圓形 */
@@ -160,4 +165,22 @@ span {
 
 .edit{
     color:blue;
+}
+
+/*modal樣式*/
+.modal-content {
+    background-color: rgba(100,100, 100, .6);
+    --bs-modal-footer-border-color: #D8CDB9;
+    --bs-modal-header-border-color: #D8CDB9;
+}
+
+    .modal-content i {
+        color: #D8CDB9;
+        font-size: 2rem;
+    }
+
+.modal-body {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 }
